# 360_connect

./: .gitignore  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  whisper_jni.cpp  whisper_wrapper.cpp  whisper_wrapper.h
app/src/main/java/com/company/app/: App.kt
app/src/main/java/com/company/app/core/common/: DispatcherProvider.kt  Result.kt
app/src/main/java/com/company/app/core/di/: AIModule.kt  DatabaseModule.kt  DispatcherModule.kt  NetworkModule.kt  RepositoryModule.kt
app/src/main/java/com/company/app/core/security/: EncryptionManager.kt  KeyStoreHelper.kt
app/src/main/java/com/company/app/core/util/: AssetExtractor.kt  AudioDecoder.kt  DateUtils.kt
app/src/main/java/com/company/app/data/remote/: ChatApi.kt  SignalingClient.kt
app/src/main/java/com/company/app/data/repository/: AIRepositoryImpl.kt  CallRepositoryImpl.kt  ChatRepositoryImpl.kt
app/src/main/java/com/company/app/domain/model/: CallWithTranscript.kt  ConversationModels.kt
app/src/main/java/com/company/app/domain/repository/: AIRepository.kt  CallRepository.kt  ChatRepository.kt
app/src/main/java/com/company/app/presentation/: MainActivity.kt
app/src/main/java/com/company/app/workers/: EmbeddingWorker.kt  SummarizationWorker.kt  TranscriptionWorker.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
(+68 files in other folders)
